# Python3

python-projects/: pyproject.toml
python-projects/OCR/: app.py
python-projects/chatApp/: main.py
python-projects/project-calculator/: main.py
python-projects/python_projects/: main.py  test.py
