[tool.poetry]
name = "python-projects"
version = "0.1.0"
description = ""
authors = ["bamitesh <b.amitesh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
numpy = "^1.22.1"
pandas = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
